# hello-world

./: .gitignore  README.md
w1/: .gitignore  0001-implementation-plan.md  0001-spec.md  0003-deployment.md  Instruction.md  README.md  docker-compose.yml
w1/backend/: .env.example  .gitignore  pyproject.toml  requirements.txt
w1/backend/app/: errors.py  main.py
w1/backend/app/api/: tags.py  tickets.py
w1/backend/app/core/: config.py
w1/backend/app/db/: session.py
w1/backend/app/models/: __init__.py  tag.py  ticket.py  ticket_tag.py
w1/backend/app/schemas/: common.py  tag.py  ticket.py
w1/docs/: test.rest
w1/frontend/: .gitignore  index.html  package.json  tsconfig.json  vite.config.ts
w1/frontend/src/: App.tsx  api.ts  index.css  main.tsx  types.ts
w1claude/: 0001-claude-spec.md  0002-claude-implementation-plan.md  Instruction.md  README.md
w1claude/backend/: .env.example
w1claude/backend/app/: database.py  main.py  models.py  schemas.py
w1claude/backend/app/routers/: tags.py  tickets.py
w1claude/frontend/: index.html  package.json
w1claude/frontend/src/: App.tsx
w1claude/frontend/src/api/: client.ts  tags.ts  tickets.ts
w1claude/frontend/src/components/: SearchBar.tsx  TagSidebar.tsx  TicketCard.tsx  TicketDialog.tsx  TicketList.tsx
w1claude/frontend/src/types/: index.ts
w2-cursor/: instructions.md
w2-cursor/webdb/: instructions.md
w2-cursor/webdb/.specify/extensions/: .registry
w2-cursor/webdb/.specify/integrations/: cursor-agent.manifest.json  speckit.manifest.json
w2-cursor/webdb/.specify/memory/: constitution.md
(+12 files in other folders)
